# rust-server

./: .env.example  Cargo.toml  README.md  apiary.apib
src/: errors.rs  main.rs  openapi.rs
src/handlers/: anime_characters_handler.rs  anime_handler.rs  anime_producers_handler.rs  auth_handler.rs  groups_handler.rs  mod.rs  users_handler.rs
src/jikan_integration/: mod.rs
src/jikan_integration/common/enums/: anime.rs
src/jikan_integration/common/structs/: anime.rs  character.rs  common.rs  mod.rs  random.rs  top.rs
src/jikan_integration/endpoints/: anime.rs  mod.rs  random.rs  top.rs
src/models/: anime.rs  common.rs  group.rs  mod.rs  producer.rs  user.rs
src/routes/: anime_characters_routes.rs  anime_producers_routes.rs  anime_routes.rs  auth_routes.rs  groups_routes.rs  mod.rs  users_routes.rs
src/routes/middlewares/: auth_middleware.rs  mod.rs  permissions_middleware.rs
src/services/: anime_service.rs  groups_service.rs  mod.rs  producers_service.rs
src/utils/: app_config.rs  jwt.rs  mod.rs  permission_macro.rs
tests/: quick_dev.rs
