[package]
name = "rust-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
serde = { version = "1.0.228", features = ["derive"] }
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
reqwest = "0.13.2"
mongodb = "3.5.1"
derive_more = "2.1.1"
log = "0.4.29"
env_logger = "0.11.9"
futures = "0.3.32"
bcrypt = "0.19.0"
time = "0.3.47"
chrono = "0.4.44"

[dev-dependencies]
