[package]
name = "rust-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
serde = { version = "1.0.228", features = ["derive"] }
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
reqwest = { version = "0.13.2", features = ["query", "json"] }
mongodb = "3.5.1"
derive_more = "2.1.1"
log = "0.4.29"
env_logger = "0.11.9"
futures = "0.3.32"
bcrypt = "0.19.0"
time = "0.3.47"
chrono = "0.4.44"
actix-cors = "0.7.1"

# docs
utoipa = { version = "5.4.0", features = ["actix_extras"] }
utoipa-actix-web = "0.1.2"
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
serde_json = "1.0.149"

[dev-dependencies]
